--- a/.lsrc
+++ b/.lsrc
@@ -1,8 +1,8 @@
 # 819J2Pip:~/.lsrc by PipStuart <Pip@CPAN.Org> izAheavily modifId`dircolors`cfgfIl(Orig ~/.DIR_COLORS)wich setz $ENV{'LS_COLORS'} 4GNU`ls --color`&&`lsd8`;
-# $VERSION='0.0';$d8VS='JCKLEdrp'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
+# $VERSION='0.0';$d8VS='K1ULJEST'; 2du:mkUtl2gNr8 altrn8 versN of .lsrc th@purposfuly varEz colrz of comon typz,try addng bakgrnd colrz2all dFz&&tst,
 #   add interaction2 lsd8 wN it Dtectz unrecognIzd XtNshNz offerng c@egOrEz with comon colr2autOm@ically insrt chOsN NtrEz,mAB add *-* NtrEz from .zshrc hEr &&
 #   mk lrc gNr8 either,confirm all accept f0nt cOdez wi dash accepting Dfalt foreground then redo NORMAL FILE LINK as no fi ln,mAB 8trm added2TERM ls someday;
-# This file was gNR8d by `lrc` Vers:0.0 d8VS:J88M8888 on d8:JCLL36Xx. Please edit ~/.lrc and run `lrc` then `src` to see changes;
+# This file was gNR8d by `lrc` Vers:0.0 d8VS:J88M8888 on d8:K1VLArl6. Please edit ~/.lrc and run `lrc` then `src` to see changes;
 # nOt:I'm pretty sure itz Chunz(!Takiz)`ls`&&`dircolors`th@cud!hndl (MULTI)?HARDLINK sO rEmMbr2kEp th@ lIn cmNtd out4her(&&kEptstng2cnfirm);
 # Keywords COLOR,OPTIONS,&& EIGHTBIT (honored by Slackware dircolors) are recognized but ignored; TERMz && XtNsionz syncd2 2016;
 # Copyright(C) 1996-2016 FreeSoftwareFound8ion,Inc. Copying and distribution of this file, with or without modific8ion, are permitted provided the
@@ -115,12 +115,15 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .2do                      01;38;5;003      # .2do (old ToDo.ls fylz)
 .2de                      01;38;5;011      # .2de (old 2 Dey -> 2dA)
 .4mtd                     01;38;5;172      # H9NMDKNO:~/.irssi/ custom-aligned cfg && Dflt.theme filez (trying lower-case 'o' for non-2pal8 orange here);
+.am                       01;38;5;011      # AutoMake script (like my git cloned source repo for xdg-desktop-portal-gtk, wich stil didn't rid syslog erorz)
+.ac                       01;38;5;172      # AutoConf script (or maybe an AnonymousCoward on SlashDot or something)
 .cfg                      01;38;5;011
 .cnf                      01;38;5;011
 .config                   01;38;5;011
 .conf-sample              01;38;5;011
 .ckm8                     01;38;5;011      # my own SDL && Curses Chess program's game-recording output file-format
 .dox                      01;38;5;011      # my personal doQmNt8ion files (first used for logging my HTTPS://Screeps.Com 2torials progress)
+.dd                       01;38;5;011      # my personal ~/dox/dvl/GTrm/GnomTerm-dconf-dump file but could also be for DiskDriveD8aDuplic8ion files
 .sgf                      01;38;5;011      # HTTPS://En.WikiPedia.Org/wiki/Smart_Game_Format                which is used by HTTPS://Online-Go.Com
 .pgn                      01;38;5;003      # HTTPS://En.WikiPedia.Org/wiki/Portable_Game_Notation           hopefully to be l8r loaded by ckm8
 .fen                      01;38;5;014      # HTTPS://En.WikiPedia.Org/wiki/Forsyth%E2%80%93Edwards_Notation hopefully to be l8r loaded by ckm8
@@ -146,21 +149,23 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .ttreerc                  01;38;5;011
 .gtkrc-2.0                01;38;5;011
 .properties               01;38;5;011
-.renamecategories         01;38;5;013      # /etc/xdg        files
-.categories               01;38;5;011      # /etc/xdg        files
-.codes                    01;38;5;014      # /etc/xdg        files
-.areas                    01;38;5;009      # /etc/xdg        files
+.renamecategories         01;38;5;013      # /etc/xdg/            filz
+.categories               01;38;5;011      # /etc/xdg/            filz
+.codes                    01;38;5;014      # /etc/xdg/            filz
+.areas                    01;38;5;009      # /etc/xdg/            filz
 .recommended              01;38;5;011      # /etc/zsh/newuser.zshrc.recommended
 .minicpanrc               01;38;5;011
+.slice                    01;38;5;013      # /lib/systemd/system/ filz `man systemd.special` documents User&&Session or VirtualMachine&&Container Slices
+.automount                01;38;5;003      # /lib/systemd/system/ filz
+.mount                    01;38;5;011      # /etc/systemd/system/ filz
 .message                  01;38;5;011
 .mesg                     01;38;5;011      # MEsSaGe az(ch@EmlInstantTxtMedia*) messagez
-.mount                    01;38;5;011      # /etc/systemd/system files
 .ch3tm                    01;38;5;013      # /**/*.ch3tm(chEtmz)azCheatSheet.htm HTML fylz
 .ch3t                     01;38;5;011      # /**/*.ch3t (chEtz)prImrLE4 ~pip/dox/dvl/ref/(Vim|XML|Zsh|Perl|.*)(Cheat(Sheet)?)?.txt fylz2trnzitN2
 .chat                     01;38;5;011      # GTalk|JabR|IRC|ICQ|Y!IM|AIM|XMPP|SMS|MMS|*IM.chat, mAB ~pip/dox/dvl/ref/*Cheat* canB .ch3t?
 .cht                      01;38;5;011      # PyQt.cht  (chRtz), ATIRadeonMSLose98Doze32BitDrvrz.CompressedHelpText?
-.real                     01;38;5;011      # /etc/apparmor.d files
-.man                      01;38;5;011      # /etc/apparmor.d files
+.real                     01;38;5;011      # /etc/apparmor.d/     filz
+.man                      01;38;5;011      # /etc/apparmor.d/     filz
 .mSj                      01;38;5;011
 .msg                      01;38;5;011
 .gml                      01;38;5;011
@@ -170,6 +175,8 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .dL0g                     01;38;5;011
 .L0g                      01;38;5;011
 .dlg                      01;38;5;011      # ~/mvz/lnf8 MooVeeZ linez script dialog fated
+.pot                      01;38;5;092      # ~/dvl/g8/jack/xdp/po/xdg-desktop-portal.pot maybe Portal or Project Object Texts with MIME-Type && msgid strings
+.Po                       01;38;5;011      # ~/dvl/g8/jack/xdp/src/.deps/xdg_desktop_portal-xdg-desktop-portal.Po maybe Pre-configured Object component lists
 .IZ                       01;38;5;011      # NumbFuck/curs/ncurses/README.IZ
 .key                      01;38;5;011
 .keys                     01;38;5;011      # NumbFuck/curs/include/
@@ -318,10 +325,13 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .Xrc                      01;38;5;011
 .Xresources               01;38;5;003
 .xtermcontrol             01;38;5;003
-.gitconfig                01;38;5;003
+.doxy                     01;38;5;003      #         file in Qt5 qtdeclarative/ project sub-directory
+.Chromium                 01;38;5;003      # LICENSE file in Qt5 qtwebengine/   project sub-directory
+.QT-LICENSE-AGREEMENT     01;38;5;003      # LICENSE file in Qt5 qtbase/        project sub-directory && in `git clone git://code.qt.io/qt/qt5.git` qt5/
 .milkytracker_config      01;38;5;003
 .fbhighscores             01;38;5;003
 .linux_logo               01;38;5;003
+.gitconfig                01;38;5;003
 .netrwhist                01;38;5;003      # ~/.vim/
 .opt                      01;38;5;003      # configure script parameter options file (with each option on a sepR8 line)
 .options                  01;38;5;003
@@ -431,6 +441,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .example                  01;38;5;015
 .sample                   01;38;5;015
 .xmpl                     01;38;5;014
+.trs                      01;38;5;015      # ~/dvl/g8/jack/xdp/ xdg-desktop-portal Test ReSults filz
 .readme                   01;38;5;015
 .README                   01;38;5;015
 .ME                       01;38;5;015      # NumbFuck/curs/(form|menu)/READ.ME
@@ -463,6 +474,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .so                       01;38;5;008
 .id                       01;38;5;008
 .in                       01;38;5;008
+.in~                      01;38;5;001      # ~/dvl/g8/jack/xdp/ xdg-desktop-portal presumably .h.in backup file from previous ./configure run
 .cps                      01;38;5;008
 .rnd                      01;38;5;008
 .devfs                    01;38;5;008
@@ -491,17 +503,21 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .HTML                     01;38;5;013
 .TOML                     01;38;5;013      # apparently some other Tcl Object Markup Language or something with rustup for cargo build inside nushell release
 .toml                     01;38;5;013
-.yml                      01;38;5;013
-.YML                      01;38;5;013
-.yaml                     01;38;5;013
+.qml                      01;38;5;013      # Qt Mark-up Language            filz
+.qmlc                     01;38;5;092      # Qt Mark-up Language Cache      filz (from ~/.cache/krita/qmlcache/)
+.jsc                      01;38;5;172      # Qt JavaScript?      Cache      filz (from ~/.cache/krita/qmlcache/)
 .json                     01;38;5;013
 .xml~                     01;38;5;092
 .xml                      01;38;5;013
 .XML                      01;38;5;013
 .xhtml                    01;38;5;013
 .XHTML                    01;38;5;013
-.dae                      01;38;5;013      # COLLADA Digital Asset Exchange filz
+.YAML                     01;38;5;013
+.yaml                     01;38;5;013
+.yml                      01;38;5;013
+.YML                      01;38;5;013
 .DAE                      01;38;5;013
+.dae                      01;38;5;013      # COLLADA Digital Asset Exchange filz
 .hkx                      01;38;5;013      # HavoK  (physics data)  Xml     filz
 .HKX                      01;38;5;013
 .hko                      01;38;5;013      # HavoK  (physics data)  Xml     filz
@@ -520,6 +536,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .desc                     01;38;5;013      # /usr/share/tasksel/ or ~/.mplayer/font/
 .vars                     01;38;5;013
 .order                    01;38;5;013
+.portal                   01;38;5;013      # /usr/(local/)?share/xdg-desktop-portal/portals probably just for gnome-shell, gtk, && kde
 .BUILDINFO                01;38;5;013      # cadence 0.9.1-1 lists all my system's installed libraries with versions neatly after the variable section;
 .MTREE                    01;38;5;008      # cad && qjc qJackCtl seem to be the 2 awkward ways to setup JACK but I can't seem to get audio out of either;
 .PKGINFO                  01;38;5;006      # cadence output for makepkg && fakeroot with various bridges to JACK that don't seem to work for playback yet;
@@ -527,8 +544,11 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .inf                      01;38;5;013
 .img                      01;38;5;013      # putr-NetRtrG8Wz FirmWare IMaGe
 .vti                      01;38;5;013      # VTK Image d8a from ParaView by KitwareInc. to visualize large d8a sets
+.ass                      01;38;5;172      # Audio Sub-title System for like video overlay text for closed-captioning    (from ~/.config/smplayer/*)
+.m3u8                     01;38;5;013      # basic   playlist muz filz in a .txt simpleformat (presumably a UTF-8 variant from ~/.config/smplayer/*)
 .m3u                      01;38;5;005      # basic   playlist muz filz in a .txt simpleformat (proly just listing filepath&&name/line,wi no metad8a)
 .pls                      01;38;5;013      #         PlayLiSt muz filz in a .ini style format
+.tox                      01;38;5;013      # ~/.xine PlayList muz filz in a .json or MakeFile style format (also for mvz videos too)
 .wpl                      01;38;5;013      # Windows PlayList muz filz in a  XML       format for Microsoft WindowsMediaPlayer
 .spi                      01;38;5;013
 .itl                      01;38;5;005      # iTunes Library
@@ -617,11 +637,13 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .h                        01;38;5;172      # C/C++ Header files were Cyan like main source files but plain ls was getting some kind of orange, so setting it
 .c                        01;38;5;014
 .cc                       01;38;5;014
-.app                      01;38;5;014      # Qt5/qtbase/mkspecs/macx-* files
+.cli                      01;38;5;014      # ~/dox/putr/Oni/Oni-systemd-services file logging root commands used to manage running services
+.app                      01;38;5;014      # Qt5/qtbase/mkspecs/macx-* filz
 .cpp                      01;38;5;014
 .cgi                      01;38;5;014
 .inc                      01;38;5;014
 .src                      01;38;5;014
+.vlt                      01;38;5;014      # ~/.local/share/vlc/skins2/*  VLC VideoLAN.Org Theme / skin2 filz
 .vsc                      01;38;5;014      # VimScrptClipbord(eg:ptg2clip.vsc)
 .vim                      01;38;5;014
 .PL                       01;38;5;014
@@ -665,7 +687,9 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .schemas                  01;38;5;014
 .aliases                  01;38;5;014
 .globals                  01;38;5;014
+.preset                   01;38;5;014      # ~/.qmmp/eq .ini style file for storing the Equalizer settings between program invoc8ionz
 .build                    01;38;5;014
+.ninja                    01;38;5;014      # meson advanced build filz used for GitHub flatpak's libportal to upd8 xdg-desktop-portal(-gtk)? there too
 .pause                    01;38;5;014
 .fbrc                     01;38;5;014
 .prf                      01;38;5;014      # Kenta Cho Sh'mups preferences && high-score d8a like for Parsec47 and R-Rootage
@@ -834,12 +858,13 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .cache-3                  01;38;5;013      # ~/.cache/fontconfig/[0-9a-f]{32}-le64.
 .cache-4                  01;38;5;009      # ~/.cache/fontconfig/[0-9a-f]{32}-le64.
 .xftcache                 01;38;5;001
+.journal                  01;38;5;001      # ~/.local/share/tracker/data/ filz (could do .ontology.journal distinctly)
 .dist                     01;38;5;001
 .distmap                  01;38;5;001
 .default                  01;38;5;001
 .exclude                  01;38;5;001
 .esd_auth                 01;38;5;001
-.oosplash                 01;38;5;001      # /etc/apparmor.d files
+.oosplash                 01;38;5;001      # /etc/apparmor.d filz
 .etcbackup                01;38;5;001
 .OLDdefault               01;38;5;001
 .pulse-cookie             01;38;5;001
@@ -925,6 +950,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .cdcdrc                   01;38;5;009
 .cdserverrc               01;38;5;009
 .defaults                 01;38;5;009      # /etc/(xdg|texmf/texdoctk)/
+.md5sums                  01;38;5;009      # /var/lib/dpkg/info/ filz
 .reboot                   01;38;5;009      # /run/
 .handmap                  01;38;5;009
 .failsafe                 01;38;5;009
@@ -959,6 +985,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .mkv                      01;38;5;164      # Matroska.Org
 .m2v                      01;38;5;164      # MPEG-2 Video    only
 .m4v                      01;38;5;164      # MPEG-4 Video    only
+.mo                       01;38;5;164      # /usr/(local/)?share/locale/*/LC_MESSAGES/xdg-desktop-portal(-gtk|-kde)? probably binary MIME-Object filz
 .mov                      01;38;5;013      # MPNS-?\VD0gIna?coctaineR?  hUnterScumFal0PN werEgamEt0cIt amystREplacNta&&hmbLcLc||dCthruCapaCT NQb8R 0m
 .MOV                      01;38;5;013
 .dot                      01;38;5;013      # graphvizfyl
@@ -983,6 +1010,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .tga                      01;38;5;164
 .tif                      01;38;5;164
 .tiff                     01;38;5;164
+.vid                      01;38;5;164      # generic video file or just a touched file in my ~/dox/dvl/dokr/ directory for a 2017 YouTube video ID URL
 .vob                      01;38;5;164      # MPEG-2 DVD
 .wmv                      01;38;5;164      # Windows Media Video
 .xbm                      01;38;5;164
@@ -1069,7 +1097,11 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .webbrowser-app           01;38;5;014      # /etc/apparmor.d
 .lxd-bridge-proxy         01;38;5;013      # /etc/apparmor.d
 .features                 01;38;5;015      # /etc/apparmor.d/cache
-.service                  01;38;5;014      # /etc/avahi/services
+.service                  01;38;5;014      # /etc/avahi/services && /(etc|lib)/systemd/system/
+.socket                   01;38;5;009      #                        /(etc|lib)/systemd/system/
+.target                   01;38;5;172      #                        /(etc|lib)/systemd/system/
+.timer                    01;38;5;011      #                        /(etc|lib)/systemd/system/
+.path                     01;38;5;092      #                        /(etc|lib)/systemd/system/
 .upgrade                  01;38;5;013      # /etc/compizconfig/upgrades
 .seat                     01;38;5;006      # /etc/ConsoleKit/seats.d
 .acm                      01;38;5;013      # /etc/console-setup
@@ -1326,7 +1358,9 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .FDL                      01;38;5;007
 .GPL                      01;38;5;172
 .GPL2                     01;38;5;011
+.GPLv2                    01;38;5;011
 .GPL3                     01;38;5;015
+.GPLv3                    01;38;5;015
 .LGPL                     01;38;5;172
 .LGPL3                    01;38;5;015
 .LGPLv3                   01;38;5;015
@@ -1470,6 +1504,7 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .15.0-24-generic          01;38;5;006;48;5;002
 .15.0-23-generic          01;38;5;004;48;5;002
 .15.0-22-generic          01;38;5;164;48;5;002 # BlO /boot Linux kernelz versionz 5.0.0 onward started with Ubuntu 19.04 Disco Dingo, so dark grn bkgr 4.15 abov
+.0.0-38-generic           01;38;5;009;48;5;006
 .0.0-36-generic           01;38;5;172;48;5;006
 .0.0-32-generic           01;38;5;011;48;5;006
 .0.0-31-generic           01;38;5;010;48;5;006
@@ -1483,9 +1518,10 @@ CHR                       01;38;5;011;48;5;000 #cd= 01;33;40    01;33;40  CHaRac
 .0.0-17-generic           01;38;5;010;48;5;006
 .0.0-16-generic           01;38;5;014;48;5;006
 .0.0-15-generic           01;38;5;012;48;5;006
-.0.0-13-generic           01;38;5;013;48;5;006
-.3.0-24-generic           01;38;5;009      # BlO /boot Linux kernelz versionz 5.3.0 onward started with Ubuntu 19.10 Eoan Ermine, so dark cyan bkgr 5.0 abov
-.3.0-23-generic           01;38;5;172
+.0.0-13-generic           01;38;5;013;48;5;006 # BlO /boot Linux kernelz versionz 5.3.0 onward started with Ubuntu 19.10 Eoan Ermine, so dark cyan bkgr 5.0 abov
+.3.0-26-generic           01;38;5;009
+.3.0-24-generic           01;38;5;172
+.3.0-23-generic           01;38;5;011
 #                                          # zsh wraps '%{' ANSI '%}' && vim User[1-9] colrz specify BlO ForeGroundz all on darkblue BakGrnd4statuslIn
 #     4NT    etfp   vim  c8  color              ANSI      HTML    Octology::d8::fldz (`d8`)
 #     0f     Fsy_   %*    W WhiteBright         \e[1;37m  FEFDFF            # vim %* resets statuslIn colr 2 Dfalt   White on darkblue so has max 10 colrz
